<resources>
    <string name="app_name">Alagou</string>
    <plurals name="quantityFloodingsPlaceholder">
        <item quantity="one">"%d alagamento encontrado"</item>
        <item quantity="other">"%d alagamentos encontrados"</item>
    </plurals>
    <string name="criado_por">"Por %s"</string>
    <string name="quantityFloodingsPlaceholder_Zero">Nenhum alagamento encontrado</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alagou_precisa_de_sua_localiza_o">Alagou! precisa de sua localização</string>
    <string name="para_aproveitar_as_funcionalidades_do_alagou_ative_seu_gps_e_d_acesso_a_sua_localiza_o">Para aproveitar as funcionalidades do Alagou!, ative seu GPS e dê acesso a sua localização</string>
    <string name="ativar_gps">Ativar GPS</string>
    <string name="criar_ponto">Registrar</string>
    <string name="digite_observa_es_sobre_o_local">Digite observações sobre o local</string>
    <string name="label_localizacao">Localização</string>
    <string name="carregando_localizacao">Carregando localização</string>
    <string name="label_observacoes">Observações</string>
    <string name="ponto_de_alagamento">Ponto de alagamento</string>
    <string name="salvar">Salvar</string>
    <string name="alagou">Alagou!</string>
    <string name="monitore_e_evite_alagamentos">Monitore e evite alagamentos</string>
    <string name="ver_rotas_no_google_maps">Ver rotas no Google Maps</string>
    <string name="nome_da_area_de_interesse">Nome da área de interesse:</string>
    <string name="casa_trabalho">Casa, trabalho…</string>
    <string name="entrar">Entrar</string>
    <string name="small_circle">Small Circle</string>
    <string name="large_circle">Large Circle</string>
    <string name="deletar_area_de_interesse">Deletar área de interesse?</string>
    <string name="cancelar">Cancelar</string>
    <string name="deletar">Deletar</string>
    <string name="criar_ponto_de_alagamento">Criar ponto de alagamento</string>
    <string name="criar_area_de_interesse">Criar área de interesse</string>
    <string name="sair_da_conta">Sair da conta</string>
    <string name="trafego_desativado">Tráfego desativado</string>
    <string name="trafego_ativado">Tráfego ativado</string>
    <string name="nao_logado">Entre em uma conta</string>
</resources>